[gd_scene load_steps=17 format=3 uid="uid://ckavqb25bdaul"]

[ext_resource type="Texture2D" uid="uid://cf6x4dcqxxxn" path="res://assets/field.svg" id="1_fj7yv"]
[ext_resource type="Script" uid="uid://bss4mgihbqfdc" path="res://bee_keeper.gd" id="2_aqk2v"]
[ext_resource type="Texture2D" uid="uid://ouxjix8duaje" path="res://assets/placeholder/frog.svg" id="2_tlwt5"]
[ext_resource type="Script" uid="uid://cmcyjojsvvnxw" path="res://bee_colony.gd" id="4_036b0"]
[ext_resource type="Texture2D" uid="uid://iml8e1d6t7qe" path="res://assets/placeholder/bee_colony.svg" id="4_aqk2v"]
[ext_resource type="Texture2D" uid="uid://d3asabufovkvv" path="res://assets/placeholder/honeyHighSprite.png" id="4_pkg7o"]
[ext_resource type="Texture2D" uid="uid://bgejwesxmh55" path="res://assets/placeholder/harvestHoneyButtonTexture.png" id="6_dwbse"]
[ext_resource type="Texture2D" uid="uid://bmtmvlpipa3d6" path="res://assets/placeholder/workbenchSprite.png" id="8_gbfbk"]
[ext_resource type="Script" uid="uid://dor5ypb603q08" path="res://workbench.gd" id="8_ioo17"]

[sub_resource type="SpriteFrames" id="SpriteFrames_aqk2v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tlwt5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_036b0"]
radius = 37.054016

[sub_resource type="CircleShape2D" id="CircleShape2D_dwbse"]
radius = 90.02222

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aqk2v"]
radius = 303.31024
height = 811.45337

[sub_resource type="LabelSettings" id="LabelSettings_dwbse"]
font_size = 50
font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
stacked_outline_count = 1
stacked_outline_0/size = 7
stacked_outline_0/color = Color(0, 0.74509805, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wse8f"]
size = Vector2(165, 104)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ioo17"]
radius = 104.0
height = 300.0

[node name="World" type="Node2D"]
y_sort_enabled = true

[node name="Grass" type="TextureRect" parent="."]
texture_repeat = 2
offset_right = 13491.0
offset_bottom = 8707.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_fj7yv")
stretch_mode = 1

[node name="BeeKeeper" type="CharacterBody2D" parent="."]
position = Vector2(308, 145)
motion_mode = 1
script = ExtResource("2_aqk2v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BeeKeeper"]
scale = Vector2(0.1494709, 0.1494709)
sprite_frames = SubResource("SpriteFrames_aqk2v")

[node name="Camera2D" type="Camera2D" parent="BeeKeeper"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeeKeeper"]
shape = SubResource("CircleShape2D_036b0")

[node name="Holding" type="Node2D" parent="BeeKeeper"]

[node name="HoneyHighSprite" type="Sprite2D" parent="BeeKeeper/Holding"]
unique_name_in_owner = true
position = Vector2(-16.000004, 8)
scale = Vector2(0.30586722, 0.30586722)
texture = ExtResource("4_pkg7o")

[node name="BeeColony" type="StaticBody2D" parent="."]
position = Vector2(466, 116)
scale = Vector2(0.25386548, 0.25386548)
script = ExtResource("4_036b0")

[node name="Sprite2D" type="Sprite2D" parent="BeeColony"]
texture = ExtResource("4_aqk2v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeeColony"]
visible = false
position = Vector2(6, 46)
shape = SubResource("CircleShape2D_dwbse")

[node name="InteractiveArea2D" type="Area2D" parent="BeeColony"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeeColony/InteractiveArea2D"]
position = Vector2(3.939094, 63.025505)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_aqk2v")

[node name="ActionButton" type="TextureButton" parent="BeeColony"]
z_index = 100
offset_left = -86.66007
offset_top = 169.38104
offset_right = 106.33993
offset_bottom = 361.38104
texture_normal = ExtResource("6_dwbse")

[node name="Label" type="Label" parent="BeeColony/ActionButton"]
z_index = 101
layout_mode = 0
offset_top = 11.817282
offset_right = 201.0
offset_bottom = 224.81728
text = "Harvest 
Honey
"
label_settings = SubResource("LabelSettings_dwbse")

[node name="Workbench" type="StaticBody2D" parent="."]
position = Vector2(734, 333)
script = ExtResource("8_ioo17")

[node name="WorkbenchSprite" type="Sprite2D" parent="Workbench"]
texture = ExtResource("8_gbfbk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Workbench"]
position = Vector2(1, 36)
shape = SubResource("RectangleShape2D_wse8f")

[node name="InteractiveArea2D" type="Area2D" parent="Workbench"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Workbench/InteractiveArea2D"]
position = Vector2(-5.000001, 28)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_ioo17")
metadata/_edit_lock_ = true

[node name="ActionButton" type="TextureButton" parent="Workbench"]
z_index = 100
offset_left = -40.99997
offset_top = 57.000008
offset_right = 152.00003
offset_bottom = 249.0
scale = Vector2(0.37631902, 0.37631902)
texture_normal = ExtResource("6_dwbse")

[node name="PlaceLabel" type="Label" parent="Workbench/ActionButton"]
z_index = 101
layout_mode = 0
offset_top = 11.817282
offset_right = 201.0
offset_bottom = 224.81728
text = "Place 
Honey
"
label_settings = SubResource("LabelSettings_dwbse")

[connection signal="honey_collected" from="BeeColony" to="BeeKeeper" method="_on_bee_colony_honey_collected"]
[connection signal="body_entered" from="BeeColony/InteractiveArea2D" to="BeeColony" method="_on_interactive_area_2d_body_entered"]
[connection signal="body_exited" from="BeeColony/InteractiveArea2D" to="BeeColony" method="_on_interactive_area_2d_body_exited"]
[connection signal="pressed" from="BeeColony/ActionButton" to="BeeColony" method="_on_action_button_pressed"]
[connection signal="placed" from="Workbench" to="BeeKeeper" method="_on_workbench_placed"]
[connection signal="body_entered" from="Workbench/InteractiveArea2D" to="Workbench" method="_on_interactive_area_2d_body_entered"]
[connection signal="body_exited" from="Workbench/InteractiveArea2D" to="Workbench" method="_on_interactive_area_2d_body_exited"]
[connection signal="pressed" from="Workbench/ActionButton" to="Workbench" method="_on_action_button_pressed"]
